...
    modifier: Modifier,
    modifierExpanded: Modifier
) {
    var everyNthExpanded by remember { mutableStateOf(true) }
    if (everyNthChar != null) {
        Accordion(
            title = "Every 15th Character",
            expanded = everyNthExpanded,
            onToggle = {
                everyNthExpanded = !everyNthExpanded
            },
            modifier = if (everyNthExpanded) modifierExpanded else modifier
        ) {
...
    modifier: Modifier,
    modifierExpanded: Modifier
) {
    var wordCountExpanded by remember { mutableStateOf(true) }
    if (wordCount != null) {
        Accordion(
            title = "Word Count",
            expanded = wordCountExpanded,
            onToggle = { wordCountExpanded = !wordCountExpanded },
            modifier = if (wordCountExpanded) modifierExpanded else modifier
        ) {
            LazyColumn {
                items(
...
